fix(navbar): change rigth icon mobile

--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -17,8 +17,6 @@
     text-decoration: none;
     display: flex;
     align-items: center;
-    font-size: var(--fs-large);
-    font-weight: 800;
     gap: .3em;
     border-radius: 100px;
     padding-inline: .5em;
